--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   "dependencies": {
     "colors": "^1.1.2",
     "glob": "^7.0.3",
+    "jade": "^1.11.0",
     "path": "^0.12.7"
   },
   "devDependencies": {
