--- a/package.json
+++ b/package.json
@@ -13,9 +13,12 @@
   "license": "MIT",
   "dependencies": {
     "colors": "^1.1.2",
+    "fs-sync": "^1.0.2",
     "glob": "^7.0.3",
     "jade": "^1.11.0",
-    "path": "^0.12.7"
+    "ncp": "^2.0.0",
+    "path": "^0.12.7",
+    "rimraf": "^2.5.2"
   },
   "devDependencies": {
     "gulp": "^3.9.1"
